--- a/home_user.html
+++ b/home_user.html
@@ -98,7 +98,12 @@
         </div>
 
 
-        <a href="editar_user.html" class="btn-editar">Editar Perfil</a>
+        <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
+          <a href="editar_user.html" class="btn-editar">Editar Perfil</a>
+          <button onclick="logout()" class="btn btn-danger" style="padding: 15px 65px; font-weight: bold; border-radius: 0; text-transform: uppercase;">
+            Sair
+          </button>
+        </div>
       </div>
     </div>
   </section>
