--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
 </head>
 
 <body class="sub_page">
-      <!-- Header section -->
-      <div id="header-placeholder"></div>
-      <!-- end header section -->
+  <!-- Header section -->
+  <div id="header-placeholder"></div>
+  <!-- end header section -->
 
   <section class="contact_section layout_padding-bottom">
     <div class="container">
@@ -62,7 +62,8 @@
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; <span id="displayYear"></span> All Rights Reserved By <a href="https://html.design/">Free Html Templates</a></p>
+      <p>&copy; <span id="displayYear"></span> All Rights Reserved By <a href="https://html.design/">Free Html
+          Templates</a></p>
     </div>
   </footer>
 
@@ -76,114 +77,44 @@
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap4.min.js"></script>
   <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
   <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap4.min.js"></script>
+  <!-- ... [Código HTML original acima permanece inalterado até a <script>] ... -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="infoModalLabel">Detalhes do Produto</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p><strong>Nome:</strong> <span id="modal-nome"></span></p>
-        <p><strong>Descrição:</strong> <span id="modal-descricao"></span></p>
-        <p><strong>Quantidade:</strong> <span id="modal-quantidade"></span></p>
-        <p><strong>Responsável:</strong> <span id="modal-responsavel"></span></p>
-        <p><strong>Telefone:</strong> <span id="modal-telefone"></span></p>
-        <p><strong>Endereço do ponto de coleta:</strong> <span id="modal-endereco"></span></p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+  <!-- Modal flutuante -->
+  <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="infoModalLabel">Detalhes do Produto</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p><strong>Nome:</strong> <span id="modal-nome"></span></p>
+          <p><strong>Descrição:</strong> <span id="modal-descricao"></span></p>
+          <p><strong>Quantidade:</strong> <span id="modal-quantidade"></span></p>
+          <p><strong>Responsável:</strong> <span id="modal-responsavel"></span></p>
+          <p><strong>Telefone:</strong> <span id="modal-telefone"></span></p>
+          <p><strong>Endereço do ponto de coleta:</strong> <span id="modal-endereco"></span></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-<script>
-  let usuarios = [];
-  let pontos = [];
-
-  // Carrega dados extras (usuários e pontos)
-  axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/usuario.php')
-    .then(response => { usuarios = response.data; });
-  axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/ponto_coleta.php')
-    .then(response => { pontos = response.data; });
-
-  $(document).ready(function () {
-    axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php')
-      .then(function (response) {
-        const dados = response.data;
-        const tabela = $('#tabela-itens').DataTable({
-          data: dados,
-          responsive: true,
-          columns: [
-            { data: 'nome' },
-            { data: 'descricao', defaultContent: 'Sem descrição' },
-            { data: 'quantidade' },
-            {
-              data: null,
-              render: function (data, type, row) {
-                return `<button class="btn btn-success btn-sm" onclick='abrirModal(${JSON.stringify(row)})'>Solicitar</button>`;
-              }
-            }
-          ],
-          language: {
-            url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/pt-BR.json"
-          }
-        });
-      })
-      .catch(function (error) {
-        console.error('Erro ao carregar dados:', error);
-        alert('Erro ao carregar os itens. Tente novamente mais tarde.');
-      });
-  });
-
-  function abrirModal(item) {
-    const usuario = usuarios.find(u => u.id == item.id_user);
-    const ponto = pontos.find(p => p.id == item.id_ponto);
-
-    document.getElementById('modal-nome').textContent = item.nome;
-    document.getElementById('modal-descricao').textContent = item.descricao || 'Sem descrição';
-    document.getElementById('modal-quantidade').textContent = item.quantidade;
-
-    if (usuario) {
-      document.getElementById('modal-responsavel').textContent = usuario.nome;
-      document.getElementById('modal-telefone').textContent = usuario.telefone || 'Não informado';
-    } else {
-      document.getElementById('modal-responsavel').textContent = 'Não identificado';
-      document.getElementById('modal-telefone').textContent = '-';
-    }
-
-    if (ponto) {
-      document.getElementById('modal-endereco').textContent = ponto.endereco;
-    } else {
-      document.getElementById('modal-endereco').textContent = 'Sem ponto de coleta definido. Entre em contato com o responsável.';
-    }
-
-    $('#infoModal').modal('show');
-  }
-</script>
-
-
-
-
-
 
   <script>
+    let usuarios = [];
+    let pontos = [];
+
+    // Carrega dados extras (usuários e pontos)
+    axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php')
+      .then(response => { usuarios = response.data; });
+    axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/ponto_coleta.php')
+      .then(response => { pontos = response.data; });
+
     $(document).ready(function () {
       axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php')
         .then(function (response) {
@@ -197,8 +128,68 @@
               { data: 'quantidade' },
               {
                 data: null,
-                render: function () {
-                  return '<button class="btn btn-success btn-sm">Solicitar</button>';
+                render: function (data, type, row) {
+                  return `<button class="btn btn-success btn-sm" onclick='abrirModal(${JSON.stringify(row)})'>Solicitar</button>`;
+                }
+              }
+            ],
+            language: {
+              url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/pt-BR.json"
+            }
+          });
+        })
+        .catch(function (error) {
+          console.error('Erro ao carregar dados:', error);
+          alert('Erro ao carregar os itens. Tente novamente mais tarde.');
+        });
+    });
+
+    function abrirModal(item) {
+      const usuario = usuarios.find(u => u.id == item.id_user);
+      const ponto = pontos.find(p => p.id == item.id_ponto);
+
+      document.getElementById('modal-nome').textContent = item.nome;
+      document.getElementById('modal-descricao').textContent = item.descricao || 'Sem descrição';
+      document.getElementById('modal-quantidade').textContent = item.quantidade;
+
+      if (usuario) {
+        document.getElementById('modal-responsavel').textContent = usuario.nome;
+        document.getElementById('modal-telefone').textContent = usuario.telefone || 'Não informado';
+      } else {
+        document.getElementById('modal-responsavel').textContent = 'Não identificado';
+        document.getElementById('modal-telefone').textContent = '-';
+      }
+
+      if (ponto) {
+        document.getElementById('modal-endereco').textContent = ponto.endereco;
+      } else {
+        document.getElementById('modal-endereco').textContent = 'Sem ponto de coleta definido. Entre em contato com o responsável.';
+      }
+
+      $('#infoModal').modal('show');
+    }
+  </script>
+
+  <script>
+    $(document).ready(function () {
+      axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php')
+        .then(function (response) {
+          const dados = response.data;
+          if ($.fn.DataTable.isDataTable('#tabela-itens')) {
+            $('#tabela-itens').DataTable().clear().destroy();
+          }
+
+          $('#tabela-itens').DataTable({
+            data: dados,
+            responsive: true,
+            columns: [
+              { data: 'nome' },
+              { data: 'descricao', defaultContent: 'Sem descrição' },
+              { data: 'quantidade' },
+              {
+                data: null,
+                render: function (data, type, row) {
+                  return `<button class="btn btn-success btn-sm" onclick='abrirModal(${JSON.stringify(row)})'>Solicitar</button>`;
                 }
               }
             ],
@@ -213,7 +204,7 @@
         });
     });
   </script>
-  <script src="js/headerLoader.js" defer></script>  
+  <script src="js/headerLoader.js" defer></script>
 </body>
 
 </html>
