--- a/about.html
+++ b/about.html
@@ -239,6 +239,8 @@
 
 
   
+
+
   <section class="py-5 bg-light">
     <div class="container">
       <div class="text-center mb-4">
@@ -247,7 +249,7 @@
   
       <div class="row g-4">
         <!-- Card 1 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Parcerias com ONGs</h5>
@@ -257,7 +259,7 @@
         </div>
   
         <!-- Card 2 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Rede Colaborativa</h5>
@@ -267,7 +269,7 @@
         </div>
   
         <!-- Card 3 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Inclusão Social</h5>
@@ -277,7 +279,7 @@
         </div>
   
         <!-- Card 4 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Assistente Virtual com IA</h5>
@@ -287,7 +289,7 @@
         </div>
   
         <!-- Card 5 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Suporte ao WhatsApp</h5>
@@ -297,7 +299,7 @@
         </div>
   
         <!-- Card 6 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Tecnologias Envolvidas</h5>
@@ -307,7 +309,7 @@
         </div>
   
         <!-- Card 7 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Gestão de Doações</h5>
@@ -317,7 +319,7 @@
         </div>
   
         <!-- Card 8 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Impacto Social</h5>
@@ -329,6 +331,7 @@
     </div>
   </section>
   
+
 
 
 
@@ -349,6 +352,7 @@
   </footer>
   <!-- footer section -->
 
+
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
@@ -362,6 +366,9 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <script src="js/headerLoader.js" defer></script>
+
+  
+
 </body>
 
 </html>
