--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 
 
 
+
+
+
+  
   <section class="py-5 bg-light">
     <div class="container">
       <!-- Bloco com imagem e texto em destaque -->
@@ -249,7 +253,7 @@
       <div class="row g-4">
         <!-- Ação 1 -->
         <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
+          <div class="card h-100 border-0 shadow-sm" data-aos="fade-up">
             <div class="card-body text-center">
               <h5 class="card-title">Arrecadação de Alimentos</h5>
               <p class="card-text">Campanhas de coleta em mercados, escolas e empresas parceiras.</p>
@@ -259,7 +263,7 @@
         </div>
         <!-- Ação 2 -->
         <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
+          <div class="card h-100 border-0 shadow-sm" data-aos="fade-up">
             <div class="card-body text-center">
               <h5 class="card-title">Distribuição Solidária</h5>
               <p class="card-text">Entregas frequentes de cestas básicas para famílias em situação de vulnerabilidade.</p>
@@ -269,7 +273,7 @@
         </div>
         <!-- Ação 3 -->
         <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
+          <div class="card h-100 border-0 shadow-sm"  data-aos="fade-up">
             <div class="card-body text-center">
               <h5 class="card-title">Parcerias com ONGs</h5>
               <p class="card-text">Unimos forças com instituições locais para ampliar nosso alcance.</p>
@@ -279,7 +283,7 @@
         </div>
         <!-- Ação 4 -->
         <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
+          <div class="card h-100 border-0 shadow-sm" data-aos="fade-up">
             <div class="card-body text-center">
               <h5 class="card-title">Educação Alimentar</h5>
               <p class="card-text">Oficinas e palestras para promover hábitos saudáveis e sustentáveis.</p>
@@ -293,6 +297,14 @@
 
 
 
+
+
+
+
+
+
+
+
   <section class="py-5 bg-light">
     <div class="container">
       <div class="text-center mb-4">
@@ -301,7 +313,7 @@
   
       <div class="row g-4">
         <!-- Card 1 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Parcerias com ONGs</h5>
@@ -311,7 +323,7 @@
         </div>
   
         <!-- Card 2 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Rede Colaborativa</h5>
@@ -321,7 +333,7 @@
         </div>
   
         <!-- Card 3 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Inclusão Social</h5>
@@ -331,7 +343,7 @@
         </div>
   
         <!-- Card 4 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Assistente Virtual com IA</h5>
@@ -341,7 +353,7 @@
         </div>
   
         <!-- Card 5 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Suporte ao WhatsApp</h5>
@@ -351,7 +363,7 @@
         </div>
   
         <!-- Card 6 -->
-        <div class="col-md-6 col-lg-3 mb-4">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Tecnologias Envolvidas</h5>
@@ -361,7 +373,7 @@
         </div>
   
         <!-- Card 7 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Gestão de Doações</h5>
@@ -371,7 +383,7 @@
         </div>
   
         <!-- Card 8 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
               <h5 class="card-title">Impacto Social</h5>
@@ -382,7 +394,7 @@
       </div>
     </div>
   </section>
-
+  
 
   
   
@@ -398,7 +410,7 @@
         </h2>
       </div>
     </div>
-    <div class="container px-0">
+    <div class="container px-0" data-aos="fade-up">
       <div id="produtoCarousel" class="carousel carousel-fade" data-ride="carousel">
         <div class="carousel-inner" id="produtos-container">
           <!-- Itens serão carregados aqui dinamicamente -->
@@ -496,12 +508,11 @@
   <!-- Custom JS -->
   <script src="js/custom.js"></script>
   <!-- User Authentication Script -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
-  
-
-    
+    AOS.init();
   </script>
-
   <!-- Chat Script -->
   <script>
     const chatWindow = document.getElementById('chat-window');
